--- a/static/css/header.css
+++ b/static/css/header.css
@@ -1,63 +1,62 @@
 :root {
-    font-size: 16px;
-    font-family: 'Open Sans';
-    --text-primary: #b6b6b6;
-    --text-secondary: #ececec;
-    --bg-primary: #23232e;
-    --bg-secondary: #141418;
-    --transition-speed: 600ms;
-  }
+  font-size: 16px;
+  font-family: 'Open Sans';
+  --text-primary: #b6b6b6;
+  --text-secondary: #ececec;
+  --bg-primary: #23232e;
+  --bg-secondary: #141418;
+  --transition-speed: 600ms;
+}
   
-  body {
-    color: black;
-    background-color: white;
-    margin: 0;
-    padding: 0;
-  }
+body {
+  margin: 0;
+  padding: 0;
+}
   
-  body::-webkit-scrollbar {
-    width: 0.25rem;
-  }
+body::-webkit-scrollbar {
+  width: 0.25rem;
+}
   
-  body::-webkit-scrollbar-track {
-    background: #1e1e24;
-  }
+body::-webkit-scrollbar-track {
+  background: #1e1e24;
+}
   
-  body::-webkit-scrollbar-thumb {
-    background: #6649b8;
-  }
+body::-webkit-scrollbar-thumb {
+  background: #6649b8;
+}
   
-  main {
-    margin-left: 5rem;
-    padding: 1rem;
-  }
+main {
+  margin-left: 5rem;
+  padding: 1rem;
+}
   
-  .navbar {
-    position: fixed;
-    background-color: var(--bg-primary);
-    transition: width 600ms ease;
-    overflow: scroll;
-  }
+.navbar {
+  position: absolute;
+  background-color: var(--bg-primary);
+  transition: width 300ms ease;
+  overflow: scroll;
+
+}
   
-  .navbar-nav {
-    list-style: none;
-    padding: 0;
-    margin: 0;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    height: 100%;
-  }
+.navbar-nav {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  height: 100%;
+}
   
-  .nav-item {
-    width: 100%;
-  }
+.nav-item {
+  width: 100%;
+}
   
-  .nav-item:last-child {
-    margin-top: auto;
-  }
+.nav-item:last-child {
+  margin-top: auto;
+}
   
-  .nav-link {
+.nav-link {
     display: flex;
     align-items: center;
     height: 5rem;
@@ -65,24 +64,24 @@
     text-decoration: none;
     filter: grayscale(100%) opacity(0.7);
     transition: var(--transition-speed);
-  }
+}
   
-  .nav-link:hover {
+.nav-link:hover {
     filter: grayscale(0%) opacity(1);
     background: var(--bg-secondary);
     color: var(--text-secondary);
-  }
+}
   
-  .link-text {
+.link-text {
     display: none;
     margin-left: 1rem;
-  }
+}
   
-  .nav-link svg {
+.nav-link svg {
     width: 2rem;
     min-width: 2rem;
     margin: 0 1.5rem;
-  }
+}
   
   .fa-primary {
     color: #ff7eee;
@@ -123,7 +122,7 @@
   }
   
   .navbar:hover .logo svg {
-    transform: rotate(-180deg);
+    transform: rotate(-130deg);
   }
   
   /* Small screens */
