--- a/templates/notes.html
+++ b/templates/notes.html
@@ -7,6 +7,7 @@
     <title>Notes</title>
 </head>
 <body>
-    {% extends 'header.html' %}
+    <h2>Coming Soon!</h2>
+    <a href="{{ url_for('dashboard') }}">Go Back To DashBoard</a>
 </body>
 </html>
